# decorators-clang-plugin

./: README.md
benchmarks/: CMakeLists.txt  Count.cpp
clang-plugin/: CMakeLists.txt
clang-plugin/src/: ASTVisiting.cpp  ASTVisiting.hpp  CodeGeneration.cpp  CodeGeneration.hpp  Compile.hpp  DecorateAttribute.cpp  DecoratorsAction.cpp  FunctionPreconditions.cpp  FunctionPreconditions.hpp
examples/: CMakeLists.txt  Cached.cpp  Count.cpp  CountAndRepeat.cpp  Errors.cpp  MeasureTime.cpp  Repeat.cpp
examples/decorators/: All.hpp  Cached.hpp  Common.hpp  Count.hpp  HelloWorld.hpp  MeasureTime.hpp  Repeat.hpp
